tests/baselines/reference/jsFileCompilationAbstractModifier.errors.txt
error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
tests/cases/compiler/a.js(1,1): error TS8009: 'abstract' can only be used in a .ts file.
tests/cases/compiler/a.js(2,5): error TS8009: 'abstract' can only be used in a .ts file.


!!! error TS5055: Cannot write file 'tests/cases/compiler/a.js' because it would overwrite input file.
==== tests/cases/compiler/a.js (2 errors) ====
    abstract class c {
    ~~~~~~~~
!!! error TS8009: 'abstract' can only be used in a .ts file.
        abstract x;
        ~~~~~~~~
!!! error TS8009: 'abstract' can only be used in a .ts file.
    }